[package]
name = "dmxt_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

open_dmx = "0.1"

thread-priority = "0.10.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

num-traits = "0.2.15"
derive_more = "0.99.17"